--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
         <title>Document</title>
     </head>
     <body>
-        
+
+        <header>
+            <h1>
+                Il mio Viaggio a Londra
+            </h1>
+            <img src="./img/pexels-bill-emrich-230794-0.jpg" alt="london-eye">
+            <img src="./img/pexels-bill-emrich-230794-1.jpg" alt="tames">
+            <img src="./img/pexels-bill-emrich-230794-2.jpg" alt="big-ben">
+            <hr>
+        </header>
+
     </body>
 </html>
