--- a/index.html
+++ b/index.html
@@ -17,5 +17,52 @@
             <hr>
         </header>
 
+        <Main>
+            <h2>
+                Le mie spese
+            </h2>
+
+            <table>
+                <thead>
+                    <th>
+                        Numero
+                    </th>
+                    <th>
+                        Descrizione
+                    </th>
+                    <th>
+                        Costo
+                    </th>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>1</td>
+                        <td>Biglietto Aereo</td>
+                        <td>120€</td>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>Biglietto Aereo</td>
+                        <td>120€</td>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>Biglietto Aereo</td>
+                        <td>120€</td>
+                    </tr>
+                </tbody>
+                <tfoot>
+                    <tr>
+                        <td colspan="2">Totale</td>
+                        <td>360€</td>
+                    </tr>
+                </tfoot>
+            </table>
+
+            <hr>
+
+        </Main>
+
+
     </body>
 </html>
