--- a/index.html
+++ b/index.html
@@ -61,6 +61,17 @@
 
             <hr>
 
+            <h3>
+                Cose da fare
+            </h3>
+
+            <ul>
+                <li>Visitare la Tower of London &cross;</li>
+                <li>Visitare Greenwich &check;</li>
+                <li>Ascoltare un artista di strada a Covent Garden &check;</li>
+                <li>Mangiare il tipico Fish and Chips Inglese &cross;</li>
+            </ul>
+
         </Main>
 
 
