--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <hr>
 
             <h3>
-                Cose da fare
+                Cose da fare:
             </h3>
 
             <ul>
@@ -71,6 +71,43 @@
                 <li>Ascoltare un artista di strada a Covent Garden &check;</li>
                 <li>Mangiare il tipico Fish and Chips Inglese &cross;</li>
             </ul>
+
+            <hr>
+
+            <h3>
+                Info utili:
+            </h3>
+
+            <ol>
+                
+                <li> 
+                    Numeri utili di emergenza
+                    <ul>
+                        <li> <strong>999</strong>- Emergenza</li>
+                        <li><strong>101</strong>- Numero Polizia</li>
+                        <li><Strong>111</Strong>- Numero Assistenza Medica </li>
+                    </ul>
+                </li>
+                   
+                <li>
+                    Hotel
+                    <ul>
+                        <li><strong>Nome Hotel</strong>: Buckingham Palace</li>
+                        <li><strong>Indirizzo Hotel</strong>: Westminster, London SW1AA, Regno Unito</li>
+                    </ul>
+                </li>
+
+                <li>
+                    Aereo
+                    <ul>
+                        <li><strong>Volo di Andata</strong>: YI234X, ore 09:30 da Milano Malpensa</li>
+                        <li><strong>Volo di Ritorno</strong>: YI236X, ore 18:30 da London Heatrow</li>
+                    </ul>
+                </li>
+
+            </ol>
+
+            <hr>
 
         </Main>
 
