--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 
             <!-- fine foto esterne -->
 
-        </Main> <!-- inizio main-->
+        </Main> <!-- fine main-->
 
     </body>
     
